# LimmesChatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _limmes_raw.txt  chatbot.py  config.py  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh  utils.py
.budget/: state.json
.claude/: CLAUDE.md  settings.json  settings.local.json
api/: .env.example  api.py  requirements.txt
chatbot/: __init__.py  exceptions.py  logging_setup.py  settings.py
chatbot/api/: __init__.py  app.py  schemas.py
chatbot/channels/: __init__.py  cli.py  line.py  line_flex.py  line_imagemap.py  line_login.py  line_rich_menu.py  telegram.py  whatsapp.py
chatbot/core/: __init__.py  ab_testing.py  analytics.py  contact.py  engine.py  fallback_log.py  feedback.py  handoff.py  memory.py  products.py  profile.py  prompts.py  push.py  (+1 more)
data/: README.md
docs/: ARCHITECTURE.md  CUSTOMIZATION.md  Chatbot-Features.docx  DEPLOYMENT.md  DocCopied.txt  FEATURES.md  SECURITY.md  TEMPLATE.md  USAGE_GUIDE.md
pdfs/: README.md
requirements/: all.txt  api.txt  base.txt  extras.txt  requirements-all.txt  requirements-base.txt  requirements-cli.txt  requirements-web-whatsapp.txt  requirements-web.txt  requirements.txt
scripts/: __init__.py  chat.py  generate_features_docx.js  ingest.py  scrape.py  serve.py
tests/: test_analytics.py  test_budget.py  test_contact.py  test_exceptions.py  test_fallback_log.py  test_handoff.py  test_language_detection.py  test_memory.py  test_products.py  test_profile.py  test_push.py  test_rate_limit.py  test_sanitize.py  test_settings.py  test_spam.py
(+56 files in other folders)
